Prevents advanced options from jumping when opened/closed.

--- a/static/style.css
+++ b/static/style.css
@@ -62,6 +62,24 @@ input[type=number] {
     font-size: 1.5em;
 }
 
+#analyze {
+    display: flex;
+    flex-direction: column;
+    row-gap: 5px;
+    align-items: flex-start;
+}
+
+#core-finder-wrapper {
+    display: flex;
+    flex-direction: column;
+    row-gap: 5px;
+    align-items: flex-start;
+}
+
+#filter_cores {
+    margin: auto;
+}
+
 .advanced-options {
     border-radius: 2px;
     padding: 5px;
@@ -75,8 +93,6 @@ input[type=number] {
 .advanced-options[open] {
     background: var(--block-color-1);
     box-shadow: 1px 1px 2px var(--shadow-color);
-    margin-top: 5px;
-    margin-bottom: 6px;
 }
 
 .advanced-options tr td:first-child {
